--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -1,5 +1,8 @@
 site_name: dynamic-ranking
 
+site_url: https://fanscale.dev/docs
+use_directory_urls: false
+
 nav:
   - Quick Start: index.md
   - API Reference: api.md
