--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build && node copy-lib.js"
   },
   "devDependencies": {
+    "fs-extra": "^11.3.0",
     "vite": "^6.2.5",
     "vite-plugin-static-copy": "^2.3.1",
     "vitest": "^3.0.6"
